fix alignment (#360)

--- a/themes/cloudposse/src/scss/components/dialog.scss
+++ b/themes/cloudposse/src/scss/components/dialog.scss
@@ -5,6 +5,7 @@
   margin-bottom: 3em;
   color: $black_50;
 
+  &__text,
   p {
     font-size: 14px;
     padding-left: 22px;
@@ -14,6 +15,7 @@
     margin-bottom: 10px;
   }
 
+  &__title,
   h4 {
     margin-bottom: 0;
     margin-top: 2px;
@@ -22,15 +24,14 @@
     text-transform: uppercase;
   }
 
-  .fa,
-  .fas {
+  &__icon {
     pointer-events: none;
     font-size: 18px;
     opacity: .3;
     filter: alpha(opacity=30);
-    margin-right: 6px;
     position: relative;
     top: 1px;
+    width: 22px;
   }
 
   &.info {
